--- a/static/style.css
+++ b/static/style.css
@@ -1,58 +1,53 @@
 body {
-    font-family: Garamond;
-    background-color: black;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #8fd7da;
 }
-h1 {
-    color: black;
-    margin-bottom: 0;
-    margin-top: 0;
-    text-align: center;
-    font-size: 40px;
-}
-h3 {
-    color: black;
-    font-size: 20px;
-    margin-top: 3px;
-    text-align: center;
-}
+
 #chatbox {
-    background-color: black;
     margin-left: auto;
     margin-right: auto;
     width: 40%;
     margin-top: 60px;
-    color: white;
 }
+
 #userInput {
     margin-left: auto;
     margin-right: auto;
     width: 40%;
     margin-top: 60px;
 }
-#textinput {
+
+#textInput {
     width: 87%;
     border: none;
-    border-bottom: 3px solid #009688;
+    border-bottom: 3px solid #e1b0e6;
     font-family: monospace;
-    font-size: 17px;
+    font-size: 25px;
 }
+
 #buttonInput {
     padding: 3px;
-    font-family: monospace;
-    font-size: 17px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    background-color: #e1b0e6;
+    border: none;
+    color: white;
 }
+
 .userText {
     color: white;
-    font-family: monospace;
-    font-size: 17px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
     text-align: right;
     line-height: 30px;
 }
+
 .userText span {
-    background-color: #009688;
+    background-color: #e1b0e6;
     padding: 10px;
     border-radius: 2px;
 }
+
 .botText {
     color: white;
     font-family: monospace;
@@ -60,14 +55,9 @@ h3 {
     text-align: left;
     line-height: 30px;
 }
+
 .botText span {
-    background-color: #EF5350;
+    background-color: #e1b0e6;
     padding: 10px;
     border-radius: 10px;
 }
-#tidbit {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 300px;
-} 
