--- a/templates/index.html
+++ b/templates/index.html
@@ -11,18 +11,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a href="index.html" class="navbar-brand"><p>ChatBot</p></a>
-			</div>
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="signup.html"><span class="glyphicon glyphicon-user"> Sign-Up</span></a></li>
-					<li><a href="login.html"><span class="glyphicon glyphicon-log-in"> Log-In</span></a></li>
-				</ul>
+				<a href="http://127.0.0.1:5000/" class="navbar-brand"><p>ChatBot</p></a>
 			</div>
 		</div>
 	</nav><br><br><br>
