--- a/static/style.css
+++ b/static/style.css
@@ -61,3 +61,16 @@ body {
     padding: 10px;
     border-radius: 10px;
 }
+
+.indicator {
+    display:none;
+    font-style: italic;
+    font-size: 50px;
+}
+
+#tidbit {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+}
