--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,13 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a href="http://127.0.0.1:5000/" class="navbar-brand"><p>ChatBot</p></a>
+				<a href="https://entertainment-chatbot-python.herokuapp.com/" class="navbar-brand"><p>ChatBot</p></a>
 			</div>
 		</div>
 	</nav><br><br><br>
 <div>
 <div id = "chatbox">
-<p class = "botText"><span>Let's have a good talk. Shall we?</span></p>
+<p class = "botText"><span>Hey there, lonely human! Let's have a good talk. Shall we?</span></p>
 </div>
 <div id = "userInput">
 <input id ="textInput" type ="text" name="msg" placeholder="Say Something!" class="typefield"><br>
