--- a/static/style.css
+++ b/static/style.css
@@ -14,24 +14,29 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 40%;
-    margin-top: 420px;
+    margin-top: 410px;
 }
 
 #textInput {
-    width: 87%;
+    width: 100%;
     border: none;
     border-bottom: 3px solid #e1b0e6;
     font-family: monospace;
     font-size: 25px;
+    position: fixed;
+    margin-right: 100px;
 }
 
 #buttonInput {
+    width: 11%;
     padding: 3px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
     background-color: #e1b0e6;
     border: none;
     color: white;
+    margin-left: 1220px;
+    position: fixed;
 }
 
 .userText {
