--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,8 @@
 			</div>
 		</div>
 	</nav><br><br><br>
-<div>
+<div id="banner-img">
+    <div>
     <div id = "chatbox">
         <p class = "botText"><span>Hey there, lonely human! Let's have a good talk. Shall we?</span></p>
     </div>
@@ -47,6 +48,7 @@ $("#buttonInput").click(function() {
 getBotResponse();
 })
 </script>
+</div>
 </div>
 </body>
 </html>
