--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Times New Roman', Times, serif;
-    background-color: #8fd7da;
+    font-family: 'Montserrat', sans-serif;
+    background-color: black;
 }
 
 #chatbox {
@@ -21,50 +21,50 @@ body {
     width: 100%;
     border: none;
     border-bottom: 3px solid #e1b0e6;
-    font-family: monospace;
+    font-family: 'Montserrat', sans-serif;
     font-size: 25px;
     position: fixed;
     margin-right: 100px;
-    height: 100px;
+    height: 50px;
 }
 
 #buttonInput {
     width: 11%;
     padding: 3px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 25px;
     background-color: #e1b0e6;
     border: none;
     color: white;
     margin-left: 1220px;
     position: fixed;
-    height: 100px;
+    height: 50px;
 }
 
 .userText {
     color: white;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 17px;
     text-align: right;
     line-height: 30px;
+    background-color: #e1b0e6;
 }
 
 .userText span {
-    background-color: #e1b0e6;
     padding: 10px;
     border-radius: 2px;
 }
 
 .botText {
     color: white;
-    font-family: monospace;
+    font-family: 'Montserrat', sans-serif;
     font-size: 17px;
     text-align: left;
     line-height: 30px;
+    background-color: #e1b0e6;
 }
 
 .botText span {
-    background-color: #e1b0e6;
     padding: 10px;
     border-radius: 10px;
 }
@@ -83,5 +83,5 @@ body {
 }
 
 .border-box {
-    border: 2px solid black;
+    border: 2px solid white;
 }
